--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,7 @@ captures/
 .idea/dictionaries
 .idea/libraries
 .idea/caches
+.idea/vcs.xml
 
 # Keystore files
 # Uncomment the following line if you do not want to check your keystore files in.
@@ -74,3 +75,4 @@ fastlane/screenshots
 fastlane/test_output
 fastlane/readme.md
 
+app/libs/
